# sharpctl

./: .gitmodules  CMakeLists.txt  README.md  build.sh  imgui.ini
src/: main.cpp
src/core/: frame_data.hpp  video_analyzer.cpp  video_analyzer.hpp
src/gui/: app.cpp  app.hpp
src/gui/panels/: control_panel.cpp  control_panel.hpp  preview_panel.cpp  preview_panel.hpp  timeline_panel.cpp  timeline_panel.hpp
src/gui/widgets/: frame_texture.cpp  frame_texture.hpp
